--- a/University.html
+++ b/University.html
@@ -15,6 +15,15 @@ img {
 </style>
 <body>
 <h1>Rajshahi University</h1>
-<img src="RU.jpg" alt="Rabat" class="center" width="790" height="444">
+<p>The first proposal to establish a university came in 1917, when Calcutta University created the Sadler Commission[citation needed] to assess the university system in Bengal. However, the recommendations of the report had no immediate consequences.
+
+University of Dhaka, established in 1921. Demand for a university in the northern part of East Bengal gained momentum when two universities were set-up quickly in West Pakistan, using funding diverted from East Bengal, without the establishment of any in the east. Students of Rajshahi College were at the forefront of the movement demanding a new university.[3] Finally, Rajshahi was selected as the home for the second university in East Bengal and the Rajshahi University Act of 1953 (East Bengal Act XV of 1953) was passed by the East Pakistan provincial Assembly on 31 March 1953.[4] Itrat Hossain Zuberi, the principal of Rajshahi College was appointed its first vice-chancellor.
+
+Initially, the university was housed in temporary locations, such as the local Circuit House and Boro Kuthi, an 18th-century Dutch establishment. B B Hindu Academy, a local school, housed the library, teachers' lounge and the medical centre. The university started out with 20 professors, 161 students (of which 5 were female) and six departments—Bengali, English, History, Law, Philosophy and Economics. In 1964, the offices moved to the permanent campus.
+
+The 1960s was a turbulent period in Bangladesh, when demands for East Pakistani autonomy became stronger. The students and staff of the university started playing an increasing role in politics. On 18 February 1969, Shamsuzzoha, a professor, was killed by the police when he tried to prevent them from shooting student demonstrators.[5] This date is now commemorated as Zoha Day.[6] During the Bangladesh Liberation War of 1971, the campus was used as a base by the Pakistan Army. A number of professors, students and officers of the university were killed by the Pakistan army during this period.
+
+After independence, a new act regarding the administration of the university came into being—the Rajshahi University Act of 1973. The post-independence years saw the university grow steadily in student enrolment and size of the academic staff. However, the 1980s were turbulent for the university, as the students agitated with other institutions of the country against the military rule of Hossain Muhammad Ershad. Since the early 1990s, the university have seen relative calm and lowering of session backlogs, though active student politics remains a contentious issue.</p>
+<img src="RU.jpg" alt="Rabat" class="center" width="500">
 </body>
 </html>
